[project]
name = "celery-demo"
version = "0.1.0"
description = ""
authors = [
    {name = "Irfan Shah",email = "irfns@protonmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"


dependencies = [
    "uvicorn[standard] (>=0.34.0,<0.35.0)",
    "fastapi (>=0.124.0,<0.125.0)",
    "celery (>=5.6.0,<5.7.0)",
    "redis (>=7.1.0,<8.0.0)",
    "psycopg2-binary (>=2.9.10,<3.0.0)",
    "sqlalchemy (>=2.0.44,<3.0.0)",
    "pydantic (>=2.12.5,<3.0.0)",
    "python-dotenv (>=1.1.1,<2.0.0)",
    "python-environ (>=0.4.54,<0.5.0)",
    "opentelemetry-distro (>=0.60b0,<0.61b0)",
    "opentelemetry-exporter-otlp (>=1.39.0,<1.40.0)",
    "opentelemetry-instrumentation-celery (>=0.60b0,<0.61b0)",
    "opentelemetry-instrumentation-fastapi (>=0.60b0,<0.61b0)",
    "opentelemetry-instrumentation-sqlalchemy (>=0.60b0,<0.61b0)",
    "opentelemetry-instrumentation-redis (>=0.60b0,<0.61b0)",
    "opentelemetry-instrumentation-logging (>=0.60b0,<0.61b0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"